--- a/content/blog/introduction_deep_learning/TP1.1 - Régression linéaire.ipynb
+++ b/content/blog/introduction_deep_learning/TP1.1 - Régression linéaire.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,8 @@
     "import numpy as np\n",
     "from numpy.polynomial.polynomial import Polynomial\n",
     "\n",
+    "import plotly\n",
+    "from plotly.subplots import make_subplots\n",
     "import plotly.graph_objects as go\n",
     "\n",
     "rng_seed = sum(ord(c) ** 2 for c in \"R5.A.12-ModMath\")"
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +76,7 @@
     "    params=(5.0, -2.0),\n",
     "    x_span=(-3.0, 3.0),\n",
     "    n_data=100,\n",
-    "    noise=6.0,\n",
+    "    noise=6.5,\n",
     "    rng=np.random.default_rng(rng_seed),\n",
     "):\n",
     "    slope, bias = params\n",
@@ -116,9 +118,7 @@
     "fig.add_scatter(x=x_data, y=y_data, mode=\"markers\", name=\"données\")\n",
     "\n",
     "#TODO utiliser Polynomial.fit pour calculer une régression, et l'afficher\n",
-    "affine_fit = ...\n",
     "\n",
-    "# affichage des coefficients\n",
     "slope_data, bias_data = affine_fit.deriv()(0), affine_fit(0)\n",
     "print(f\"y = {slope_data} * x + {bias_data}\")\n",
     "\n",
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3. Définition du problème inverse\n",
+    "## Partie 2 - Analyse du problème de régression\n",
     "\n",
     "Comment déterminer la pente et le biais ? \n",
     "Vous avez déjà fait des régressions linéaires, peut-être avec `polyfit`, peut-être avec d'autres méthodes.\n",
@@ -144,7 +144,85 @@
     "\n",
     "$$ {\\rm MSE}(w, b) := \\frac{1}{N} \\sum_{k = 1}^N \\bigl( w x^{(k)} + b - y^{(k)} \\bigr)^2 $$\n",
     "\n",
-    "L'acronyme ${\\rm MSE}$ signifie *mean squared error*. Affichons cette fonction en fonction des paramètres $(w, b)$."
+    "L'acronyme ${\\rm MSE}$ signifie *mean squared error*. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1. Calcul de l'erreur\n",
+    "\n",
+    "Compléter la fonction ci-dessous qui, à partir d'une pente $w$ et d'un biais $b$, calcule l'erreur quadratique moyenne de la régression linéaire."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mean_squared_error(w, b, x=x_data, y=y_data):\n",
+    "    \"\"\"\n",
+    "    Calcule l'erreur quadratique moyenne pour un modèle de régression linéaire.\n",
+    "\n",
+    "    Args:\n",
+    "        w (float): Le poids du modèle de régression linéaire.\n",
+    "        b (float): Le biais du modèle de régression linéaire.\n",
+    "        x (float, optionnel): Les données d'entrée.\n",
+    "        y (float, optionnel): Les valeurs cibles.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: L'erreur quadratique moyenne du modèle de régression linéaire.\n",
+    "    \"\"\"\n",
+    "    pass #TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2. L'erreur pour différents paramètres\n",
+    "\n",
+    "On peut voir l'espace des paramètres comme une carte : la pente correspond à la *longitude* et le biais à la *latitude*. \n",
+    "En chaque point, i.e. pour chaque pente et chaque biais, on peut associer une altitude, qui correspond à l'erreur quadratique moyenne. \n",
+    "Cela définit une topographie, un terrain avec du relief.\n",
+    "Pour cet exemple précis, on verra que la topographie présente peu d'intérêt, il s'agit juste d'un puits, mais affichons là quand même.\n",
+    "\n",
+    "Pour l'afficher, on commence par définir un vecteur de «longitudes» (de pentes), un vecteur de «latitudes» (de biais), et un tableau d'«altitudes» (d'erreur). Cela prend la forme du tableau suivant.\n",
+    "\n",
+    "|           |        w[0]     |       w[1]      |   ...    |       w[-1]       |\n",
+    "|-----------|-----------------|-----------------|----------|-------------------|\n",
+    "| **b[0]**  | MSE(w[0], b[0]) | MSE(w[1], b[0]) |   ...    | MSE(w[-1], b[0])  |\n",
+    "| **b[1]**  | MSE(w[0], b[1]) | MSE(w[1], b[1]) |   ...    | MSE(w[-1], b[1])  |\n",
+    "| $\\vdots$  |     $\\vdots$    |    $\\vdots$     | $\\ddots$ |     $\\vdots$      |\n",
+    "| **b[-1]** | MSE(w[0], b[0]) | MSE(w[0], b[0]) |   ...    | MSE(w[-1], b[-1]) |\n",
+    "\n",
+    "Construire une matrice `loss` dans la cellule suivante qui correspond à ce tableau."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# valeurs de pente et de biais\n",
+    "w = np.linspace(-1, 10, 20)\n",
+    "b = np.linspace(-10, 10, 30)\n",
+    "\n",
+    "# TODO matrice des MSE, avec w en colonne et b en ligne\n",
+    "loss = ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3. Topographie dans l'espace des paramètres\n",
+    "\n",
+    "La cellule ci-dessous s'occupe de cet affichage topographique.\n",
+    "Il place également quelques points choisis aléatoirement dans le plan, et affiche les droites de régression linéaires correspondantes."
    ]
   },
   {
@@ -153,23 +231,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# valeurs de pente et de biais \n",
-    "w = np.linspace(-2, 10, 50)\n",
-    "b = np.linspace(-12, 12, 50)\n",
-    "\n",
-    "#TODO calcul de la MSE sous forme de matrice, on a w en colonne et b en ligne\n",
-    "loss = ...\n",
-    "\n",
-    "# affichage du graphe\n",
-    "fig = go.Figure()\n",
-    "fig.add_surface(x=w, y=b, z=loss, showscale=False)\n",
-    "fig.update_layout(\n",
-    "    autosize=False,\n",
-    "    width=400,\n",
-    "    height=380,\n",
-    "    margin=dict(l=20, r=20, b=20, t=20),\n",
-    "    scene=dict(xaxis_title=\"pente\", yaxis_title=\"biais\", zaxis_title=\"erreur\"),\n",
+    "# création de la figure\n",
+    "fig = plotly.subplots.make_subplots(\n",
+    "    rows=1,\n",
+    "    cols=2,\n",
+    "    column_widths=[0.4, 0.6],\n",
+    "    column_titles=[\n",
+    "        \"Erreur en fonction des paramètres\",\n",
+    "        \"Données et régressions linéaires\",\n",
+    "    ],\n",
     ")\n",
+    "fig.update_layout(\n",
+    "    width=800, height=350, margin=dict(l=20, r=20, b=20, t=20), showlegend=False\n",
+    ")\n",
+    "\n",
+    "# topographie de l'erreur dans l'espace des paramètres\n",
+    "\n",
+    "## paramètres d'affichage\n",
+    "contour_params = dict(\n",
+    "    contours_coloring=\"lines\",\n",
+    "    colorscale=\"Greys_r\",\n",
+    "    showscale=False,\n",
+    "    contours=dict(showlabels=True, labelfont=dict(size=10)),\n",
+    "    ncontours=40,\n",
+    "    line=dict(smoothing=1.3)\n",
+    ")\n",
+    "\n",
+    "## affichage du contour\n",
+    "fig.add_contour(x=w, y=b, z=loss, row=1, col=1, **contour_params)\n",
+    "fig.update_xaxes(title=\"w\", row=1, col=1)\n",
+    "fig.update_yaxes(title=\"b\", row=1, col=1)\n",
+    "\n",
+    "# affichage de régressions linéaires aléatoires\n",
+    "\n",
+    "## jeu de données\n",
+    "fig.add_scatter(x=x_data, y=y_data, mode=\"markers\", row=1, col=2)\n",
+    "fig.update_xaxes(title=\"x\", row=1, col=2)\n",
+    "fig.update_yaxes(title=\"y\", row=1, col=2)\n",
+    "\n",
+    "## paramètres aléatoires\n",
+    "n_dots = 4\n",
+    "rng = np.random.default_rng(rng_seed)\n",
+    "params_scatter = rng.uniform([w.min(), b.min()], [w.max(), b.max()], (n_dots, 2))\n",
+    "\n",
+    "w_scatter, b_scatter = params_scatter.T\n",
+    "err_scatter = [mean_squared_error(wk, bk) for wk, bk in params_scatter]\n",
+    "c_scatter = plotly.colors.sample_colorscale(\n",
+    "    plotly.colors.sequential.Plasma, samplepoints=np.linspace(0.0, 1.0, 7)[1:-1]\n",
+    ")\n",
+    "\n",
+    "## affichage des points sur la surface\n",
+    "marker3d_params = dict(size=10, color=c_scatter)\n",
+    "scatter3d_params = dict(marker=marker3d_params, mode=\"markers\", row=1, col=1)\n",
+    "# fig.add_scatter3d(x=w_scatter, y=b_scatter, z=err_scatter, **scatter3d_params)\n",
+    "fig.add_scatter(x=w_scatter, y=b_scatter, **scatter3d_params)\n",
+    "\n",
+    "## affichage des droites\n",
+    "x_left, x_right = x_data.min(), x_data.max()\n",
+    "for (wk, bk), ck in zip(params_scatter, c_scatter):\n",
+    "    yk_left, yk_right = wk * x_left + bk, wk * x_right + bk\n",
+    "    line_params = dict(color=ck)\n",
+    "    scatter_params = dict(line=line_params, mode=\"lines\", row=1, col=2)\n",
+    "    fig.add_scatter(x=[x_left, x_right], y=[yk_left, yk_right], **scatter_params)\n",
+    "\n",
     "fig.show()"
    ]
   },
@@ -177,12 +301,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Partie 2 - Introduction aux tenseurs\n",
+    "### 2.4. Affichage 3D de la topographie (de l'erreur)\n",
+    "\n",
+    "Si les cartes IGN ne vous conviennent pas, on peut aussi afficher la surface en 3D."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure()\n",
+    "\n",
+    "#TODO surface (w, b) -> loss\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    width=420, height=350, margin=dict(l=20, r=20, b=20, t=20), showlegend=False\n",
+    ")\n",
+    "fig.update_layout(\n",
+    "    scene=dict(xaxis_title=\"pente\", yaxis_title=\"biais\", zaxis_title=\"erreur\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Partie 3 - Introduction aux tenseurs\n",
     "\n",
     "Dans la cellule au-dessus, `w`, `b`, et `loss` sont des **tenseurs**. \n",
     "Dans ce contexte informatique, ce terme technique indique simplement des tableaux de nombres structurés, une sorte de généralisation des matrices et des vecteurs. \n",
     "Ainsi, `w` et `b` sont des tenseurs d'ordre 1 (i.e. des vecteurs) tandi que `loss` est un tensor d'ordre 2 (i.e. une matrice).\n",
-    "Parfois, on remplace le terme «ordre» par «rang» ou «dimension».\n",
+    "Parfois, on remplace le terme «ordre» par «rang» ou «dimension». \n",
+    "Les scalaires sont des tenseurs d'ordre 0.\n",
     "\n",
     "Avec NumPy, la structure s'appelle [`ndarray`](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html) et avec PyTorch, il s'agit de [`Tensor`](https://pytorch.org/docs/stable/tensors.html).\n",
     "\n",
@@ -193,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1. Le caractère structuré des données\n",
+    "### 3.1. Le caractère structuré des données\n",
     "\n",
     "Dans la cellule suivante, quelles sont les listes de listes qui peuvent être converties en tenseurs ? Vérifier votre raisonnement grâce à la fonction de conversion `array` de NumPy. Quel est l'ordre de ces tenseurs ?"
    ]
@@ -214,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2. Les opérations *componentwise*\n",
+    "### 3.2. Les opérations *componentwise*\n",
     "\n",
     "La différence majeure avec les matrices et les vecteurs est la structure algébrique : par défaut, les additions, produits, etc sont appliqués terme à terme.\n",
     "De même pour les fonctions, comme indiqué ci-dessous."
@@ -222,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,6 +383,7 @@
     "y1 = np.sin(x)\n",
     "\n",
     "y2 = np.empty_like(x) # initie un tenseur avec les mêmes dimensions que x\n",
+    "\n",
     "#TODO remplir le vecteur y2 avec une boucle et comparer les résultats"
    ]
   },
@@ -238,7 +391,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3. Le *broadcasting*\n",
+    "### 3.3. Le *broadcasting*\n",
     "\n",
     "En utilisant la syntaxe `v = u[:, None]` on converti un tenseur de taille $N_u$ en un tenseur de taille $N_u \\times 1$. \n",
     "\n",
@@ -269,9 +422,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4. Des questions ?\n",
+    "### 3.4. Des questions ?\n",
     "\n",
-    "Pour avoir plus d'exemples, vous pouvez regarder cette [vidéo de deepmath](https://www.youtube.com/watch?v=XoB6xPMZ8y8). Sinon, passez au TP suivant !"
+    "Pour avoir plus d'exemples, vous pouvez regarder cette [vidéo de deepmath](https://www.youtube.com/watch?v=XoB6xPMZ8y8)."
    ]
   }
  ],
