DL - TP1.4 update

--- a/content/blog/introduction_deep_learning/TP1.4 - Apprentissage par lots.ipynb
+++ b/content/blog/introduction_deep_learning/TP1.4 - Apprentissage par lots.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
     "        batch_loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "        #TODO sauvegarde des valeurs des paramètres\n",
+    "        #TODO gérer la sauvegarde de l'historique des paramètres\n",
     "\n",
     "    return None"
    ]
@@ -122,29 +122,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_linreg(\n",
-    "    n_epochs=100, batch_size=0, optim_algo=torch.optim.SGD, model=None, **optim_params\n",
+    "    n_epochs=100, batch_size=0, model=None, optim_algo=torch.optim.SGD, optim_params={}\n",
     "):\n",
     "    if model is None:\n",
     "        model = p1.LinearRegression()\n",
     "\n",
     "    dataset = TensorDataset(*p1.get_dataset())\n",
+    "    # Notation avec étoile pour déplier le tuple, équivalent à :\n",
+    "    # x_data, y_data = p1.get_dataset()\n",
+    "    # dataset = TensorDataset(x_data, y_data)\n",
     "    if batch_size == 0:\n",
     "        batch_size = len(dataset)\n",
     "\n",
-    "    #TODO définir le dataloader\n",
+    "    # TODO définir le dataloader\n",
     "\n",
     "    loss_fun = nn.MSELoss()\n",
-    "    optimizer = optim_algo(model.parameters(), lr=learning_rate)\n",
+    "    optimizer = optim_algo(model.parameters(), **optim_params)\n",
     "\n",
-    "    w_history, b_history = [], []\n",
     "    for _ in range(n_epochs):\n",
     "        w_epoch, b_epoch = train_epoch(dataloader, model, loss_fun, optimizer)\n",
-    "        #TODO enregistrer l'historique des paramètres\n",
+    "\n",
+    "        # TODO gérer la sauvegarde de l'historique des paramètres dans w_history et b_history\n",
     "\n",
     "    return model, w_history, b_history"
    ]
@@ -165,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, all_w, all_b = train_linreg(n_epochs=15)\n",
+    "_, all_w, all_b = train_linreg(n_epochs=15, optim_params=dict(lr=1e-1))\n",
     "p1.training_evolution(all_w, all_b, loss_trace=loss_trace, data_trace=data_trace)"
    ]
   },
@@ -189,21 +192,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "_, all_w, all_b = train_linreg(n_epochs=7, batch_size=25, optim_params=dict(lr=5e-2))\n",
+    "p1.training_evolution(all_w, all_b, loss_trace=loss_trace, data_trace=data_trace)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "_, all_w, all_b = train_linreg(n_epochs=7, batch_size=5, optim_params=dict(lr=1e-2))\n",
+    "p1.training_evolution(all_w, all_b, loss_trace=loss_trace, data_trace=data_trace)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "_, all_w, all_b = train_linreg(n_epochs=15, batch_size=1, optim_params=dict(lr=1e-3))\n",
+    "p1.training_evolution(all_w, all_b, loss_trace=loss_trace, data_trace=data_trace)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,23 +239,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO générer le dataloader\n",
+    "\n",
+    "n_batches = 4  # le nombre de batches à afficher\n",
+    "\n",
+    "# grâce à ce zip, le `for` s'arrête après au plus `n_batches` itérations\n",
+    "for _, (x_batch, y_batch) in zip(range(n_batches), dataloader):\n",
+    "    pass  # TODO calculer le minimum du batch et le stocker dans des listes bien choisies\n",
+    "\n",
+    "# TODO gérer l'affichage avec `p1.training_evolution`"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2. Afficher la loss de plusieurs batches\n",
-    "\n",
+    "### 2.2. Afficher la *loss* de plusieurs lots\n",
     "\n",
     "**TODO:**  \n",
-    "Pour différents batches, afficher la loss dans l'espace des paramètres. Que remarquez-vous ?\n",
-    "Faire évoluer le `batch_size`, notamment prendre `batch_size=1` et `batch_size=5` pour comparer."
+    "Compléter la fonction `plot_loss_batches` ci-dessous pour afficher le profil de *loss* pour les premiers *batches* sur une grille, en utilisant la fonction `p1.init_contour_trace`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,16 +271,16 @@
     "b = np.linspace(-10, 10, 15)\n",
     "\n",
     "\n",
-    "def plot_first_batches(dataset, rows=3, cols=3, batch_size=10):\n",
-    "    dataloader = DataLoader(dataset, batch_size=batch_size, generator=p1.torch_rng())\n",
-    "    assert len(dataloader) >= rows * cols\n",
-    "\n",
-    "    fig = make_subplots(rows=rows, cols=cols)\n",
-    "    min_w, min_b, mean_loss = [], [], 0.0\n",
-    "    for idx, (x_batch, y_batch) in enumerate(dataloader):\n",
-    "        i, j = divmod(idx, cols)\n",
-    "        #TODO calculer la loss et l'afficher\n",
-    "    return fig"
+    "def plot_loss_batches(dataset, rows=3, cols=3, batch_size=10):\n",
+    "    pass  # TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TODO:**  \n",
+    "Faire ce type d'affichage avec différents `batch_size` pour comparer, notamment `batch_size=1` et `batch_size=5`."
    ]
   },
   {
@@ -269,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_first_batches(dataset, batch_size=5)"
+    "plot_loss_batches(dataset, batch_size=5)"
    ]
   },
   {
@@ -309,12 +329,16 @@
     "Le risque de ces méthodes est de s'extraire du minimum global. Pour éviter cela, on peut garder un œil sur la loss moyenne pendant une époque, et sauvegarder le modèle qui a la meilleure performance.\n",
     "\n",
     "**TODO:**  \n",
-    "Reprendre l'algorithme précédent en implémentant cette sauvegarde avec `torch.save`."
+    "Modifier les fonctions\n",
+    "1. `train_epoch` pour calculer et renvoyer également la loss moyenne sur l'*epoch*.\n",
+    "2. `train_linreg` pour sauvegarder le meilleur modèle au cours de l'entraînement.\n",
+    "\n",
+    "On pourrait utiliser `torch.save` pour sauvegarder le modèle dans un fichier, mais ici on se contentera de le stocker dans une variable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": []
